Update code for 2018 Utah Regional

--- a/scout/src/main/res/layout/fragment_standscout_auton.xml
+++ b/scout/src/main/res/layout/fragment_standscout_auton.xml
@@ -33,15 +33,43 @@
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="wrap_content"
-                    android:text="Starts with gear"
-                    android:id="@+id/ch_auton_gear"/>
+                    android:text="Has Cube"
+                    android:id="@+id/ch_auton_cube"/>
+            </LinearLayout>
 
-                <CheckBox
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:layout_height="wrap_content"
-                    android:text="Starts with balls"
-                    android:id="@+id/ch_auton_balls"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <RadioGroup
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal"
+                    >
+
+                    <RadioButton
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:layout_height="wrap_content"
+                        android:text="Starts Left"
+                        android:id="@+id/rb_auton_left"/>
+
+                    <RadioButton
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:layout_height="wrap_content"
+                        android:text="Starts Center"
+                        android:id="@+id/rb_auton_center"/>
+
+                    <RadioButton
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:layout_height="wrap_content"
+                        android:text="Starts Right"
+                        android:id="@+id/rb_auton_right"/>
+                </RadioGroup>
+
 
 
             </LinearLayout>
@@ -51,7 +79,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:textSize="15sp"
-                android:text="Fuel (+5 Balls)"
+                android:text="Auto Crossing"
                 android:layout_weight="1" />
 
             <LinearLayout
@@ -59,69 +87,14 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
-                <Button android:id="@+id/bt_auton_high"
+                <Button android:id="@+id/bt_auton_mobility"
                     android:layout_height="wrap_content"
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:padding="25dp"
-                    android:text="High (+5)"
+                    android:text="Mobility (Crosses Autoline)"
                     android:layout_margin="5dp"
                     android:theme="@style/MVRTButtonStyle"/>
-
-                <Button android:id="@+id/bt_auton_high_minus"
-                    android:layout_height="wrap_content"
-                    android:layout_width="wrap_content"
-                    android:padding="25dp"
-                    android:text="-5"
-                    android:layout_margin="5dp"
-                    android:theme="@style/MVRTButtonStyle"/>
-
-            </LinearLayout>
-
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <Button android:id="@+id/bt_auton_low"
-                    android:layout_height="wrap_content"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:padding="25dp"
-                    android:text="Low (+5)"
-                    android:layout_margin="5dp"
-                    android:theme="@style/MVRTButtonStyle"/>
-
-                <Button android:id="@+id/bt_auton_low_minus"
-                    android:layout_height="wrap_content"
-                    android:layout_width="wrap_content"
-                    android:padding="25dp"
-                    android:text="-5"
-                    android:layout_margin="5dp"
-                    android:theme="@style/MVRTButtonStyle"/>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <CheckBox
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:layout_height="wrap_content"
-                    android:text="Uses Hopper"
-                    android:id="@+id/ch_auton_hopper"/>
-
-                <CheckBox
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:layout_height="wrap_content"
-                    android:text="Ground Ball Intake"
-                    android:id="@+id/ch_auton_groundintake"/>
-
 
             </LinearLayout>
 
@@ -130,7 +103,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:textSize="15sp"
-                android:text="Gears"
+                android:text="Switch"
                 android:layout_weight="1" />
 
             <LinearLayout
@@ -138,16 +111,16 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
-                <Button android:id="@+id/bt_auton_gear"
+                <Button android:id="@+id/bt_auton_switch"
                     android:layout_height="wrap_content"
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:padding="25dp"
-                    android:text="Place Gear"
+                    android:text="Placed Cube"
                     android:layout_margin="5dp"
                     android:theme="@style/MVRTButtonStyle"/>
 
-                <Button android:id="@+id/bt_auton_gear_minus"
+                <Button android:id="@+id/bt_auton_switch_minus"
                     android:layout_height="wrap_content"
                     android:layout_width="wrap_content"
                     android:padding="25dp"
@@ -162,14 +135,32 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:textSize="15sp"
-                android:text="Other"
+                android:text="Scale"
                 android:layout_weight="1" />
 
-            <CheckBox
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Mobility (crosses baseline)"
-                android:id="@+id/ch_auton_mobility"/>
+                android:orientation="horizontal">
+
+                <Button android:id="@+id/bt_auton_scale"
+                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:padding="25dp"
+                    android:text="Placed Cube"
+                    android:layout_margin="5dp"
+                    android:theme="@style/MVRTButtonStyle"/>
+
+                <Button android:id="@+id/bt_auton_scale_minus"
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    android:padding="25dp"
+                    android:text="-1"
+                    android:layout_margin="5dp"
+                    android:theme="@style/MVRTButtonStyle"/>
+
+            </LinearLayout>
 
             <Button android:id="@+id/bt_auton_finish"
                 android:layout_height="wrap_content"
