--- a/scout/src/main/res/layout/fragment_matchinfo.xml
+++ b/scout/src/main/res/layout/fragment_matchinfo.xml
@@ -37,4 +37,21 @@ xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/matchinfo_key"
         android:text="q123@SAMP:b[115,254,1678]"/>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button android:id="@+id/bt_info_start"
+            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:padding="25dp"
+            android:text="Start Match"
+            android:layout_margin="115dp"
+            android:theme="@style/MVRTButtonStyle"/>
+    </LinearLayout>
+
 </LinearLayout>
+
+
