--- a/scout/src/main/res/layout/fragment_standscout_teleop.xml
+++ b/scout/src/main/res/layout/fragment_standscout_teleop.xml
@@ -22,114 +22,127 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:textSize="15sp"
-                android:text="Fuel (Cycles)"
+                android:text="Cube Cycles"
                 android:layout_weight="1" />
 
-            <Button android:id="@+id/bt_teleop_hopper"
-                android:layout_height="wrap_content"
+
+
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:paddingTop="20dp"
-                android:paddingBottom="20dp"
-                android:text="Hopper"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <Button android:id="@+id/bt_teleop_opp_switch"
+                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:padding="25dp"
+                    android:text="Opponent Switch"
+                    android:layout_margin="5dp"
+                    android:theme="@style/MVRTButtonStyle"/>
+
+                <Button android:id="@+id/bt_teleop_opp_switch_minus"
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    android:padding="25dp"
+                    android:text="-1"
+                    android:layout_margin="5dp"
+                    android:theme="@style/MVRTButtonStyle"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <Button android:id="@+id/bt_teleop_scale"
+                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:padding="25dp"
+                    android:text="Scale"
+                    android:layout_margin="5dp"
+                    android:theme="@style/MVRTButtonStyle"/>
+
+                <Button android:id="@+id/bt_teleop_scale_minus"
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    android:padding="25dp"
+                    android:text="-1"
+                    android:layout_margin="5dp"
+                    android:theme="@style/MVRTButtonStyle"/>
+
+                <!-- <Button android:id="@+id/bt_teleop_scale_drop"
+                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:paddingTop="30dp"
+                    android:paddingBottom="30dp"
+                    android:text="Dropped Scale"
+                    android:layout_margin="5dp"
+                    android:theme="@style/MVRTButtonStyle"/> -->
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <Button android:id="@+id/bt_teleop_alliance_switch"
+                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:padding="25dp"
+                    android:text="Switch"
+                    android:layout_margin="5dp"
+                    android:theme="@style/MVRTButtonStyle"/>
+
+                <Button android:id="@+id/bt_teleop_alliance_switch_minus"
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    android:padding="25dp"
+                    android:text="-1"
+                    android:layout_margin="5dp"
+                    android:theme="@style/MVRTButtonStyle"/>
+
+                <!--- <Button android:id="@+id/bt_teleop_switch_drop"
+                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_weight="1"
+                    android:paddingTop="30dp"
+                    android:paddingBottom="30dp"
+                    android:text="Dropped Switch"
+                    android:layout_margin="5dp"
+                    android:theme="@style/MVRTButtonStyle"/> -->
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+            <Button android:id="@+id/bt_teleop_vault"
+                android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:padding="25dp"
+                android:text="Vault"
                 android:layout_margin="5dp"
                 android:theme="@style/MVRTButtonStyle"/>
 
-            <LinearLayout
-                android:layout_width="match_parent"
+            <Button android:id="@+id/bt_teleop_vault_minus"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-
-                <Button android:id="@+id/bt_teleop_high"
-                    android:layout_height="wrap_content"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:paddingTop="20dp"
-                    android:paddingBottom="20dp"
-                    android:text="High (+5)"
-                    android:layout_margin="5dp"
-                    android:theme="@style/MVRTButtonStyle"/>
-
-                <Button android:id="@+id/bt_teleop_high_minus"
-                    android:layout_height="wrap_content"
-                    android:layout_width="wrap_content"
-                    android:paddingTop="20dp"
-                    android:paddingBottom="20dp"
-                    android:text="-5"
-                    android:layout_margin="5dp"
-                    android:theme="@style/MVRTButtonStyle"/>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <Button android:id="@+id/bt_teleop_low"
-                    android:layout_height="wrap_content"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:paddingTop="20dp"
-                    android:paddingBottom="20dp"
-                    android:text="Low (+5)"
-                    android:layout_margin="5dp"
-                    android:theme="@style/MVRTButtonStyle"/>
-
-                <Button android:id="@+id/bt_teleop_low_minus"
-                    android:layout_height="wrap_content"
-                    android:layout_width="wrap_content"
-                    android:paddingTop="20dp"
-                    android:paddingBottom="20dp"
-                    android:text="-5"
-                    android:layout_margin="5dp"
-                    android:theme="@style/MVRTButtonStyle"/>
-
-            </LinearLayout>
-
-            <!--GEARS-->
-
-            <TextView
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:textSize="15sp"
-                android:text="Gears"
-                android:layout_weight="1" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <Button android:id="@+id/bt_teleop_getgear"
-                    android:layout_height="wrap_content"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:padding="20dp"
-                    android:text="Get"
-                    android:layout_margin="5dp"
-                    android:theme="@style/MVRTButtonStyle"/>
-
-                <Button android:id="@+id/bt_teleop_putgear"
-                    android:layout_height="wrap_content"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:padding="20dp"
-                    android:text="Place"
-                    android:layout_margin="5dp"
-                    android:theme="@style/MVRTButtonStyle"/>
-
-                <Button android:id="@+id/bt_teleop_dropgear"
-                    android:layout_height="wrap_content"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:padding="20dp"
-                    android:text="Drop"
-                    android:layout_margin="5dp"
-                    android:theme="@style/MVRTButtonStyle"/>
+                android:padding="25dp"
+                android:text="-1"
+                android:layout_margin="5dp"
+                android:theme="@style/MVRTButtonStyle"/>
 
             </LinearLayout>
+
 
             <!--CLIMB-->
 
@@ -206,11 +219,21 @@
 
             </LinearLayout>
 
-            <CheckBox
-                android:layout_width="match_parent"
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/bt_teleop_parked"
                 android:layout_height="wrap_content"
-                android:text="Touchpad Lit? (at end of match)"
-                android:id="@+id/ch_teleop_climb"/>
+                android:layout_width="match_parent"
+                android:padding="35dp"
+                android:text="Robot Parked?"
+                android:layout_margin="10dp"
+                android:theme="@style/MVRTButtonStyle"/>
+
+        </LinearLayout>
 
             <Button android:id="@+id/bt_teleop_finish"
                 android:layout_height="wrap_content"
@@ -219,7 +242,6 @@
                 android:text="Finish Teleop"
                 android:layout_margin="10dp"
                 android:theme="@style/MVRTButtonStyle"/>
-
 
         </LinearLayout>
     </ScrollView>
