--- a/dataTable.css
+++ b/dataTable.css
@@ -11,5 +11,15 @@ body {
 }
 
 .teamElement {
-    height: 400px;
+    height: 600px;
+}
+
+/*MEDIA QUERY*/
+@media only screen and (max-width : 640px) {
+
+    .container {
+        padding-left: 0px;
+        padding-right: 0px;
+    }
+
 }
