--- a/index.css
+++ b/index.css
@@ -35,6 +35,15 @@ body {
   text-shadow: 0 1px 3px rgba(0,0,0,.5);
 }
 
+.card {
+    text-align: left;
+}
+
+.card button {
+    width: 30%;
+    margin-left: 30px;
+}
+
 /* Extra markup and styles for table-esque vertical and horizontal centering */
 .site-wrapper {
   display: table;
@@ -58,6 +67,9 @@ body {
   padding: 30px;
 }
 
+.inner.foot {
+    padding: 10px;
+}
 
 /*
  * Header
