--- a/scout/src/main/res/layout/fragment_stand_scout_auton.xml
+++ b/scout/src/main/res/layout/fragment_stand_scout_auton.xml
@@ -19,46 +19,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:textSize="15sp"
-                android:text="Starting Configuration"
-                android:layout_weight="1" />
-
-
-            <RadioGroup
-                android:id="@+id/starting_config"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <RadioButton
-                    android:id="@+id/radio_hatch"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:layout_height="wrap_content"
-                    android:text="Has Hatch" />
-
-                <RadioButton
-                    android:id="@+id/radio_cargo"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:layout_height="wrap_content"
-                    android:text="Has Cargo" />
-                <RadioButton
-                    android:id="@+id/radio_no_content"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:layout_height="wrap_content"
-                    android:text="None" />
-
-            </RadioGroup>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:textSize="15sp"
-                android:text="Starting Level"
-                android:layout_weight="1" />
+                android:layout_weight="1"
+                android:text="Starting Location"
+                android:textSize="15sp" />
 
             <RadioGroup
                 android:id="@+id/starting_level"
@@ -69,18 +32,57 @@
                 <RadioButton
                     android:id="@+id/radio_level1"
                     android:layout_width="0dp"
-                    android:layout_weight="1"
                     android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:text="Level 1" />
 
                 <RadioButton
                     android:id="@+id/radio_level2"
                     android:layout_width="0dp"
-                    android:layout_weight="2"
                     android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:text="Level 2" />
 
+                <RadioButton
+                    android:id="@+id/radio_level3"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Level 3" />
+
             </RadioGroup>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_weight="1"
+                android:text="Preload"
+                android:textSize="15sp" />
+
+            <LinearLayout
+                android:id="@+id/starting_config"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/bt_sandstorm_rocket_cargo_level1"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:text="Balls (0)"
+                    android:theme="@style/MVRTButtonStyle" />
+
+                <Button
+                    android:id="@+id/bt_sandstorm_rocket_cargo_level1_minus"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:text="-1"
+                    android:theme="@style/MVRTButtonStyle" />
+
+            </LinearLayout>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -91,54 +93,33 @@
                 android:layout_weight="1" />
 
             <Button
-                android:id = "@+id/bt_sandstorm_hab_cross"
+                android:id="@+id/bt_sandstorm_hab_cross"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="25dp"
-                android:text="Crosses HAB Line"
                 android:layout_margin="5dp"
+                android:padding="25dp"
+                android:text="Crosses Initiation Line"
                 android:theme="@style/MVRTButtonStyle" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:textSize="15sp"
-                android:text="Rocket"
-                android:layout_weight="1" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:layout_height="wrap_content"
-                    android:text="Cargo"
-                    android:textSize="13sp" />
-
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:layout_height="wrap_content"
-                    android:text="Hatch"
-                    android:textSize="13dp"
-                    android:gravity="left" />
-
-            </LinearLayout>
+                android:layout_weight="1"
+                android:text="Shooting"
+                android:textSize="15sp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
-                <Button android:id="@+id/bt_sandstorm_rocket_cargo_level1"
-                    android:layout_height = "wrap_content"
-                    android:layout_width = "0dp"
-                    android:layout_weight = "2"
-                    android:text = "Level 1 (0)"
+                <Button
+                    android:id="@+id/bt_sandstorm_rocket_cargo_level1"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:text="Inner (0)"
                     android:theme="@style/MVRTButtonStyle" />
 
                 <Button android:id="@+id/bt_sandstorm_rocket_cargo_level1_minus"
@@ -148,20 +129,6 @@
                     android:text = "-1"
                     android:theme="@style/MVRTButtonStyle" />
 
-                <Button android:id="@+id/bt_sandstorm_rocket_hatch_level1"
-                    android:layout_height = "wrap_content"
-                    android:layout_width = "0dp"
-                    android:layout_weight = "2"
-                    android:text = "Level 1 (0)"
-                    android:theme="@style/MVRTButtonStyle" />
-
-                <Button android:id="@+id/bt_sandstorm_rocket_hatch_level1_minus"
-                    android:layout_height="wrap_content"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:text="-1"
-                    android:theme="@style/MVRTButtonStyle" />
-
             </LinearLayout>
 
             <LinearLayout
@@ -169,11 +136,12 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
-                <Button android:id="@+id/bt_sandstorm_rocket_cargo_level2"
-                    android:layout_height = "wrap_content"
-                    android:layout_width = "0dp"
-                    android:layout_weight = "2"
-                    android:text = "Level 2 (0)"
+                <Button
+                    android:id="@+id/bt_sandstorm_rocket_cargo_level2"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:text="Outer (0)"
                     android:theme="@style/MVRTButtonStyle" />
 
                 <Button android:id="@+id/bt_sandstorm_rocket_cargo_level2_minus"
@@ -183,20 +151,6 @@
                     android:text = "-1"
                     android:theme="@style/MVRTButtonStyle" />
 
-                <Button android:id="@+id/bt_sandstorm_rocket_hatch_level2"
-                    android:layout_height = "wrap_content"
-                    android:layout_width = "0dp"
-                    android:layout_weight = "2"
-                    android:text = "Level 2 (0)"
-                    android:theme="@style/MVRTButtonStyle" />
-
-                <Button android:id="@+id/bt_sandstorm_rocket_hatch_level2_minus"
-                    android:layout_height="wrap_content"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:text="-1"
-                    android:theme="@style/MVRTButtonStyle" />
-
             </LinearLayout>
 
             <LinearLayout
@@ -204,11 +158,12 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
-                <Button android:id="@+id/bt_sandstorm_rocket_cargo_level3"
-                    android:layout_height = "wrap_content"
-                    android:layout_width = "0dp"
-                    android:layout_weight = "2"
-                    android:text = "Level 3 (0)"
+                <Button
+                    android:id="@+id/bt_sandstorm_rocket_cargo_level3"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:text="Bottom (0)"
                     android:theme="@style/MVRTButtonStyle" />
 
                 <Button android:id="@+id/bt_sandstorm_rocket_cargo_level3_minus"
@@ -218,86 +173,17 @@
                     android:text = "-1"
                     android:theme="@style/MVRTButtonStyle" />
 
-                <Button android:id="@+id/bt_sandstorm_rocket_hatch_level3"
-                    android:layout_height = "wrap_content"
-                    android:layout_width = "0dp"
-                    android:layout_weight = "2"
-                    android:text = "Level 3 (0)"
-                    android:theme="@style/MVRTButtonStyle" />
-
-                <Button android:id="@+id/bt_sandstorm_rocket_hatch_level3_minus"
-                    android:layout_height="wrap_content"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:text="-1"
-                    android:theme="@style/MVRTButtonStyle" />
-
-            </LinearLayout>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:textSize="15sp"
-                android:text="Cargo Ship"
-                android:layout_weight="1" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal" >
-
-                <Button android:id="@+id/bt_sandstorm_cargoship_cargo"
-                    android:layout_height="wrap_content"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:padding="25dp"
-                    android:text="Placed Cargo (0)"
-                    android:layout_margin="5dp"
-                    android:theme="@style/MVRTButtonStyle"/>
-
-                <Button android:id="@+id/bt_sandstorm_cargoship_cargo_minus"
-                    android:layout_height="wrap_content"
-                    android:layout_width="wrap_content"
-                    android:padding="25dp"
-                    android:text="-1"
-                    android:layout_margin="5dp"
-                    android:theme="@style/MVRTButtonStyle"/>
-
             </LinearLayout>
 
 
-            <LinearLayout
+            <Button
+                android:id="@+id/bt_sandstorm_finish"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal" >
-
-                <Button android:id="@+id/bt_sandstorm_cargoship_hatch"
-                    android:layout_height="wrap_content"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:padding="25dp"
-                    android:text="Placed Hatch (0)"
-                    android:layout_margin="5dp"
-                    android:theme="@style/MVRTButtonStyle"/>
-
-                <Button android:id="@+id/bt_sandstorm_cargoship_hatch_minus"
-                    android:layout_height="wrap_content"
-                    android:layout_width="wrap_content"
-                    android:padding="25dp"
-                    android:text="-1"
-                    android:layout_margin="5dp"
-                    android:theme="@style/MVRTButtonStyle"/>
-
-            </LinearLayout>
-
-            <Button android:id="@+id/bt_sandstorm_finish"
-                android:layout_height="wrap_content"
-                android:layout_width="match_parent"
-                android:padding="25dp"
-                android:text="Finish Sandstorm"
                 android:layout_margin="10dp"
-                android:theme="@style/MVRTButtonStyle"/>
+                android:padding="25dp"
+                android:text="Finish Auton"
+                android:theme="@style/MVRTButtonStyle" />
 
         </LinearLayout>
     </ScrollView>
