fixed teleop ids

--- a/scout/src/main/res/layout/fragment_stand_scout_teleop.xml
+++ b/scout/src/main/res/layout/fragment_stand_scout_teleop.xml
@@ -29,14 +29,14 @@
                 android:orientation="horizontal">
 
                 <Button
-                    android:id="@+id/bt_auton_power_cells"
+                    android:id="@+id/bt_auton_inner"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="Inner (0)"
                     android:theme="@style/MVRTButtonStyle" />
 
-                <Button android:id="@+id/bt_auton_power_cells_minus"
+                <Button android:id="@+id/bt_auton_inner_minus"
                     android:layout_height = "wrap_content"
                     android:layout_width = "0dp"
                     android:layout_weight = "1"
@@ -51,14 +51,14 @@
                 android:orientation="horizontal">
 
                 <Button
-                    android:id="@+id/bt_sandstorm_rocket_cargo_level2"
+                    android:id="@+id/bt_auton_outer"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="Outer (0)"
                     android:theme="@style/MVRTButtonStyle" />
 
-                <Button android:id="@+id/bt_sandstorm_rocket_cargo_level2_minus"
+                <Button android:id="@+id/bt_auton_outer_minus"
                     android:layout_height = "wrap_content"
                     android:layout_width = "0dp"
                     android:layout_weight = "1"
@@ -73,14 +73,14 @@
                 android:orientation="horizontal">
 
                 <Button
-                    android:id="@+id/bt_sandstorm_rocket_cargo_level3"
+                    android:id="@+id/bt_auton_bottom"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="Bottom (0)"
                     android:theme="@style/MVRTButtonStyle" />
 
-                <Button android:id="@+id/bt_sandstorm_rocket_cargo_level3_minus"
+                <Button android:id="@+id/bt_auton_bottom_minus"
                     android:layout_height = "wrap_content"
                     android:layout_width = "0dp"
                     android:layout_weight = "1"
@@ -110,7 +110,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal" >
 
-                <Button android:id="@+id/bt_teleop_position_control"
+                <Button android:id="@+id/bt_teleop_rotation_control"
                     android:layout_height="wrap_content"
                     android:layout_width="0dp"
                     android:layout_weight="1"
@@ -174,7 +174,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal" >
 
-                <Button android:id="@+id/bt_teleop_position_control"
+                <Button android:id="@+id/bt_teleop_trench"
                     android:layout_height="wrap_content"
                     android:layout_width="0dp"
                     android:layout_weight="1"
